Написал блоки объявлений css для заголовка и текста

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Lesson 1</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla incidunt asperiores totam unde atque recusandae beatae error nobis expedita! Fugiat similique eveniet corporis iusto omnis? Expedita tempore sunt recusandae?
     </p>
