--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <table border="1" width="100%" sellpadding="10px">
+        <table border="1" width="100%">
             <h1>Lesson 1</h1>
         </table>
-            <table border="1" width="100%" sellpadding="40px">
+            <table border="1" width="100%">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla incidunt asperiores totam unde atque recusandae beatae error nobis expedita! Fugiat similique eveniet corporis iusto omnis? Expedita tempore sunt recusandae?
                 </p>
