--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla incidunt asperiores totam unde atque recusandae beatae error nobis expedita! Fugiat similique eveniet corporis iusto omnis? Expedita tempore sunt recusandae?
                 </p>
             </table>
+                <div class="center">
+                        <style>
+                                .center {
+                                 width: 65px; /* Ширина элемента в пикселах */
+                                 padding: 10px; /* Поля вокруг текста */
+                                 margin: auto; /* Выравниваем по центру */
+                                 background: #fc0; /* Цвет фона */
+                                }
+                        </style>
+                    <a href="http://google.com">GOOGLE</a>
+                </div>
     </body>
 </html>
