атрибуты <body> цвет фона

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <body>
+    <body bgcolor="#7dc991">
         <table border="1" width="100%">
             <h1>Lesson 1</h1>
         </table>
@@ -22,7 +22,7 @@
                                  width: 65px; /* Ширина элемента в пикселах */
                                  padding: 10px; /* Поля вокруг текста */
                                  margin: auto; /* Выравниваем по центру */
-                                 background: #fc0; /* Цвет фона */
+                                 background: rgb(155, 153, 144); /* Цвет фона */
                                 }
                         </style>
                     <a href="http://google.com">GOOGLE</a>
