--- a/начало.html
+++ b/начало.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>НАЧАЛО</title>
+    <style>
+        p {
+            color: blueviolet;
+            text-align: center;
+        }
+    </style>
 </head>
 <body bgcolor="gray">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
