поковырял цвета, ничего особенного

--- a/начало.html
+++ b/начало.html
@@ -7,12 +7,44 @@
     <title>НАЧАЛО</title>
     <style>
         p {
-            color: blueviolet;
+            color:#a255cf;
             text-align: center;
         }
     </style>
 </head>
-<body bgcolor="gray">
+<body bgcolor="#cceddc">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, reiciendis quis unde debitis magni voluptatibus nobis. Asperiores ab iusto voluptas magni laborum nemo corrupti possimus praesentium doloremque laboriosam? Magnam, architecto!</p>
 </body>
 </html>
