--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <body bgcolor="#7dc991">
+    <body bgcolor="#cceddc">
         <table border="1" width="100%">
             <h1>Lesson 1</h1>
         </table>
@@ -16,16 +16,8 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla incidunt asperiores totam unde atque recusandae beatae error nobis expedita! Fugiat similique eveniet corporis iusto omnis? Expedita tempore sunt recusandae?
                 </p>
             </table>
-                <div class="center">
-                        <style>
-                                .center {
-                                 width: 65px; /* Ширина элемента в пикселах */
-                                 padding: 10px; /* Поля вокруг текста */
-                                 margin: auto; /* Выравниваем по центру */
-                                 background: rgb(155, 153, 144); /* Цвет фона */
-                                }
-                        </style>
-                    <a href="http://google.com">GOOGLE</a>
+                <div>
+                    <a href="начало.html">ПЕРВАЯ СТРАНИЦА</a>
                 </div>
     </body>
 </html>
