--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body bgcolor="#cceddc">
-        <table border="1" width="100%">
             <h1>Lesson 1</h1>
-        </table>
-            <table border="1" width="100%">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla incidunt asperiores totam unde atque recusandae beatae error nobis expedita! Fugiat similique eveniet corporis iusto omnis? Expedita tempore sunt recusandae?
-                </p>
-            </table>
-                <div>
-                    <a href="начало.html">ПЕРВАЯ СТРАНИЦА</a>
+                <blockquote>
+                    <hr>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, doloremque! Facilis nisi ducimus hic, omnis ea totam reprehenderit, eos recusandae perferendis accusamus minus? Fuga deserunt iusto aut nemo, perferendis quis!
+                        </p>
+                    <hr/>
+                </blockquote>
+                <div align="center">
+                    <a href="начало.html">ПЕРВАЯ СТРАНИЦА</a>>>>
                 </div>
     </body>
 </html>
