гусь-гитдра в теге pre

--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
                     <hr/>
                 </blockquote>
                 <div align="center">
-                    <a href="начало.html">ПЕРВАЯ СТРАНИЦА</a>>>>
+                    <a href="начало.html">ПЕРВАЯ СТРАНИЦА</a>
                 </div>
+                    <div align="center">
+                        <pre>
+                                СТРИМ░░ 
+                                ░СТРИМ░▄▀▀▀▄░СТРИМ░░ 
+                                ▄███▀░◐░▄▀▀▀▄░░░░░░ 
+                                ░░▄███▀░◐░░░░▌░░░ 
+                                ░░░▐░▄▀▀▀▄░░░▌░░░░ 
+                                ▄███▀░◐░░░▌░░▌░░░░ 
+                                ░░░░▌░░░░░▐▄▄▌░░░░░ 
+                                ░░░░▌░░░░▄▀▒▒▀▀▀▀▄ 
+                                ░░░▐░░░░▐▒▒▒▒▒▒▒▒▀▀▄ 
+                                ░░░▐░░░░▐▄▒▒▒▒▒▒▒▒▒▒▀▄ 
+                                ░░░░▀▄░░░░▀▄▒▒▒▒▒▒▒▒▒▒▀▄ 
+                                ░░░░░░▀▄▄▄▄▄█▄▄▄▄▄▄▄▄▄▄▄▀▄ 
+                                ░░░░░░░░░░░▌▌░▌▌░░░░░ 
+                                ░░░░░░░░░░░▌▌░▌▌░░░░░ 
+                                ░░░░░░░░░▄▄▌▌▄▌▌░░░░░
+                        </pre>
+                    </div>
     </body>
 </html>
