оказывается атрибут align подходит для тега pre

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <div align="center">
                     <a href="начало.html">ПЕРВАЯ СТРАНИЦА</a>
                 </div>
-                    <div align="center">
-                        <pre>
+                        <pre align="left">
                                 СТРИМ░░ 
                                 ░СТРИМ░▄▀▀▀▄░СТРИМ░░ 
                                 ▄███▀░◐░▄▀▀▀▄░░░░░░ 
@@ -37,6 +36,5 @@
                                 ░░░░░░░░░░░▌▌░▌▌░░░░░ 
                                 ░░░░░░░░░▄▄▌▌▄▌▌░░░░░
                         </pre>
-                    </div>
     </body>
 </html>
