теги таблиц и атрибуты

--- a/index.html
+++ b/index.html
@@ -70,5 +70,12 @@
                                 ░░░░░░░░░░░▌▌░▌▌░░░░░ 
                                 ░░░░░░░░░▄▄▌▌▄▌▌░░░░░
                         </pre>
+                    <table align="center" bgcolor="gray" bordercolor="red">
+                        <tr>
+                            <td>text</td>
+                            <td>text</td>
+                            <td>text</td>
+                        </tr>
+                    </table>
     </body>
 </html>
