горизонтальная и вертикальная таблицы

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
                     <table align="center" bgcolor="gray" bordercolor="red">
                         <tr>
                             <td>text</td>
+                        </tr>
+                            <tr>
+                                <td>text</td>
+                            </tr>
+                    </table>
+                    ъ
+                    <table align="center" bgcolor="gray" bordercolor="red">
+                        <tr>
+                            <td>text</td>
                             <td>text</td>
                             <td>text</td>
                         </tr>
