тег заголовка таблицы th

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                                 ░░░░░░░░░░░▌▌░▌▌░░░░░ 
                                 ░░░░░░░░░▄▄▌▌▄▌▌░░░░░
                         </pre>
+                    <table align="center" bordercolor="blue">
+                        <th>TEXT</th>
+                    </table>
+                    
                     <table align="center" bgcolor="gray" bordercolor="red">
                         <tr>
                             <td>text</td>
