scrolling да, нет

--- a/frame.html
+++ b/frame.html
@@ -7,6 +7,6 @@
     <title>tag Frame</title>
 </head>
     <frameset>
-        <frame src="начало.html" name="начало" scrolling="no" noresize>
+        <frame src="начало.html" name="начало" scrolling="yes" noresize>
     </frameset>
 </html>
